@@ -1,11 +1,12 @@
 /* Compiled and linked by bind_c.f90.  */
 
 #include <stdlib.h>
+#include <stdbool.h>
 
-void subtest (_Bool, int *);
+void subtest (bool, int *);
 
 void
-c_proc (_Bool present, int *val)
+c_proc (bool present, int *val)
 {
   int val2;
   if (!present && val)
